# render-json-template

./: .gitignore  Dockerfile  README.md  action.yaml  entrypoint.sh  pyproject.toml  test.json
.github/: dependabot.yml
.github/workflows/: build-push.yml  test.yaml
cli/: __init__.py  github_logging.py
render_json/: github_logging.py  render.py  requirements.txt  template.py
